# adn-capital

./: .dockerignore  .env.example  .gitignore  ADNEXUS_APP_EXPERIENCE_NOTES.md  ADNEXUS_AUTH_PRICING_USECASES_NOTES.md  ADNEXUS_FULL_SITE_PHASE1_NOTES.md  ADNEXUS_FULL_SITE_REBUILD_AUDIT.md  ADNEXUS_MOTION_SYSTEM_NOTES.md  ADNEXUS_PRODUCT_PAGES_NOTES.md  ADNEXUS_QA_POLISH_NOTES.md  ADNEXUS_REBUILD_AUDIT.md  ADN_AI_BROKER_WORKFLOW_FULL.md  ADN_CAPITAL_REBUILD_PLAN_v3.2.md  ADN_DESIGN_SYSTEM.md  ADN_FINCEPT_ARCHITECTURE.md  ADN_FINCEPT_TASKLIST.md  ADN_UX_UI_AUDIT.md  ADN_UX_UI_CODEX_PROMPTS.md  CHANGELOG-JOURNAL-AI-REVIEW.md  CHANGELOG-RBAC-RS-HIDING.md  CHANGELOG-REBRANDING-AVATAR.md  CHANGELOG-SCANNER-V4.md  CHATBOT AI.md  CLAUDE.md  CODEX_DEPLOY_PROMPT.md  DEPLOY.md  DEPLOY_RUNBOOK.md  DEPLOY_SAFE_RUNBOOK.md  Dockerfile  HOMEPAGE_REDESIGN_V2_NOTES.md  HUONG_DAN_CAI_DAT.md  UI_INVESTMENT_CHAT.md  WORKFLOW_TU_VAN_DAU_TU_v2.md  _test_narrow.js  capacitor.config.ts  check-db.js  deploy-scanner.sh  deploy.sh  docker-compose.yml  next.config.ts  (+9 more)
android/: .gitignore  keystore.properties.example
capacitor-shell/: index.html
deploy/: cron-contracts.env  full-deploy.sh  postdeploy-smoke.sh  predeploy-check.sh  rollback-web.sh  safe-web-deploy.sh  setup-cron.sh  setup-vps.sh  update.sh
discord-bot/: .env.example  Dockerfile  README.md  package.json
fiinquant-bridge/: Dockerfile.python
mobile-shell/: index.html  offline.html
nginx/: nginx.conf
photo-editor/: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
photo-editor/ci/: build.yml  release.yml
photo-editor/crates/ai-core/: Cargo.toml
photo-editor/crates/ai-core/src/: inference.rs  lib.rs
photo-editor/crates/raw-core/: Cargo.toml
photo-editor/crates/raw-core/src/: color.rs  decode.rs  demosaic.rs  lib.rs  meta.rs
photo-editor/scripts/: issue-license.mjs
photo-editor/src/: App.tsx  styles.css
photo-editor/src-tauri/: Cargo.toml  tauri.conf.json
photo-editor/src-tauri/capabilities/: default.json
photo-editor/src-tauri/resources/models/: README.md
photo-editor/src-tauri/src/: lib.rs  main.rs
photo-editor/src-tauri/src/ai/: mod.rs
photo-editor/src-tauri/src/raw/: mod.rs
photo-editor/src/components/: AdjustPanel.tsx  BgPanel.tsx  BrushLayer.tsx  Canvas.tsx  ColorGradePanel.tsx  ExportPanel.tsx  HealOverlay.tsx  HealPanel.tsx  Histogram.tsx  LayerMaskOverlay.tsx  LayersPanel.tsx  Library.tsx  LicensePanel.tsx  MaskOverlay.tsx  MaskPanel.tsx  Presets.tsx  RatingFlag.tsx  Toolbar.tsx
photo-editor/src/components/color/: ColorWheels.tsx  HSLMixer.tsx  LutControls.tsx  SplitToning.tsx  ToneCurve.tsx
photo-editor/src/editor/: heal.test.ts  heal.ts  layers.test.ts  layers.ts  masks.test.ts  masks.ts  pipeline.ts  recipe.test.ts  recipe.ts  shaders.ts
photo-editor/src/editor/color/: curve.test.ts  curve.ts  hsl.test.ts  hsl.ts  look.ts  lut.test.ts  lut.ts  wheels.test.ts  wheels.ts
photo-editor/src/lib/: catalog.ts  export.ts  license.test.ts  license.ts  platform.ts
photo-editor/src/store/: editorStore.test.ts  editorStore.ts  useCatalogStore.ts  useCatalogSync.ts  useLicense.ts  useLook.ts  useRating.ts
prisma/: schema.prisma  seed-admin.ts
public/: manifest.json  mobile-prototype.html  offline.html  sw.js
rebuild/: HUONG_DAN_CAI_DAT.md  REBUILD_PHASE1_LANDING.md  REBUILD_PHASE2_APP_LAYOUT.md  REBUILD_PHASE3_TOOLS.md  REBUILD_PHASE4_REMAINING.md  globals.css  tailwind.config.ts
scripts/: backfill-adn-rank-history.mjs  check-encoding.mjs  cleanup-crawled-articles.mjs  force_run_all.py  generate-backtest-snapshot.py  migrate_sqlite_to_pg.py  phase5-pilot-runtime-verify.mjs  phase5-runtime-readiness.mjs  phase5-staging-safe-smoke.mjs  phase6-staging-runtime-verify.mjs  phase6-workflow-runtime-readiness.mjs  phase6-workflow-smoke.mjs  phase7-observability-verify.mjs  prefetch_cache.py  seed-admin.js  seed-changelog-pricing.ts  seed-knowledge.ts  seed-news.ts  verify-adn-signal-core.mjs  verify-aiden-intent.mjs  verify-aiden-stock-v2-only.mjs  verify-database-aiden.mjs  verify-database-dnse-market.mjs  verify-database-dnse-websocket.mjs  verify-database-morning-brief.mjs  verify-database-morning-readiness.mjs  verify-database-news.mjs  verify-database-radar-realtime.mjs  verify-database-readiness.mjs  verify-database-v2-cron-setup.mjs  verify-datahub-redis-cache.mjs  verify-dnse-market-provider.mjs  verify-mobile-android.mjs  verify-signal-reporting.mjs  verify-vnstock-sponsor-eod.mjs
src/: middleware.ts
vnstock-bridge/: main.py  (+2 more)
(+607 files in other folders)
